src/objects/c2g__codaPaymentMediaSummary__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppayment</customHelpPage>
    <description>Holds information for payment transmission including payment values summarized by account and the corresponding bank account details.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Media Summaries</relationshipLabel>
        <relationshipName>PaymentMediaSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountNumber__c</fullName>
        <label>Destination Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountReference__c</fullName>
        <label>Destination Bank Account Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankCity__c</fullName>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankCountry__c</fullName>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankIbanNumber__c</fullName>
        <label>Bank IBAN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankSortCode__c</fullName>
        <label>Destination Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankStateProvince__c</fullName>
        <label>Bank State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__BankSwiftNumber__c</fullName>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankZipPostalCode__c</fullName>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BillingCity__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BillingStateProvince__c</fullName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__BillingZipPostCode__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValueTotal__c</fullName>
        <label>Discount Value Total</label>
        <summarizedField>c2g__codaPaymentMediaDetail__c.c2g__Discount__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentMediaDetail__c.c2g__PaymentMediaSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GrossValueTotal__c</fullName>
        <label>Gross Value Total</label>
        <summarizedField>c2g__codaPaymentMediaDetail__c.c2g__OriginalValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentMediaDetail__c.c2g__PaymentMediaSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__GrossValue__c</fullName>
        <label>Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payment Media Summaries (Company)</relationshipLabel>
        <relationshipName>PaymentMediaSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayeeName__c</fullName>
        <label>Destination Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentControlCurrency__c</fullName>
        <label>Payment Control Currency</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMediaControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Media Control</label>
        <referenceTo>c2g__codaPaymentMediaControl__c</referenceTo>
        <relationshipLabel>Payment Media Summaries</relationshipLabel>
        <relationshipName>PaymentMediaSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentReference__c</fullName>
        <label>Payment Reference</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValueTotal__c</fullName>
        <label>Payment Value Total</label>
        <summarizedField>c2g__codaPaymentMediaDetail__c.c2g__PaymentValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentMediaDetail__c.c2g__PaymentMediaSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ReasonCode__c</fullName>
        <label>Reason Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingCode__c</fullName>
        <label>Reporting Code</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Media Summary</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaPaymentMediaSummary</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaPaymentMediaSummary</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaPaymentMediaSummary</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__GrossValue__c</columns>
        <columns>c2g__DiscountValue__c</columns>
        <columns>c2g__PaymentValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Media Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Media Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>